Added possibitity to create, edit and delete posts

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,14 @@
 {% block content %}
     <h1>{% block title %} Welcome to Yulia's Cookbook {% endblock %}</h1>
     {% for post in posts %}
-      <a href="#">
+      <a href="{{ url_for('post', post_id=post['id']) }}">
         <h2>{{ post['title'] }}</h2>
       </a>
       <span class="badge badge-primary">{{ post['created'] }}</span>
+      <!добавлена кнопка для редактирование поста>
+      <a href="{{ url_for('edit', id=post['id']) }}">
+            <span class="badge badge-warning">Edit</span>
+        </a>
       <hr>
     {% endfor %}
 {% endblock %}
